@@ -7,6 +7,8 @@ Version 0.5.1
 
 - fixed boolean check of :class:`FieldStorage`
 - url routing system properly supports unicode URL rules now.
+- file upload streams no longer have to provide a truncate()
+  method.
 
 
 Version 0.5
